--- a/myblog/templates/blog/download.html
+++ b/myblog/templates/blog/download.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <hr>
-<h4><p align="center"><b><a href="#" download> Русский язык </a></b></p>
+<h4><p align="center"><b><a href="https://mega.nz/#!CigSlQQR!cjqIfjryB2yvpvYcJqicPp1bv3eANemdzlWcq9oIBTA" download=""> Русский язык </a></b></p>
     <p align="center"><b><a href="#"  download > Украинский язык </a></b></p></h4>
 
 {% endblock content %}
