--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -21,8 +21,8 @@
     <div class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-between">
         <a class="p-2 text-muted" href="/">Главная</a>
-        <a class="p-2 text-muted" href="download">Скачать книгу</a>
-        <a class="p-2 text-muted" href="contact">Контакты</a>
+        <a class="p-2 text-muted" href="/download">Скачать книгу</a>
+        <a class="p-2 text-muted" href="/contact">Контакты</a>
       </nav>
     </div>
   {% block content %}
